--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -32,15 +32,12 @@ jobs:
       run: |
         mamba env update --file environment.yml --name base
 
-    # 以下のステップを追加: requirements.txtの存在をチェック
-    - name: Check for requirements.txt
+    - name: Check for requirements.txt and install Pip dependencies
       run: |
         if [ -f requirements.txt ]; then
-          echo "requirements.txt exists. Installing dependencies..."
           pip install -r requirements.txt
         else
           echo "requirements.txt does not exist. Skipping pip install."
-        fi
 
     - name: Lint with flake8
       run: |
@@ -52,6 +49,7 @@ jobs:
       run: |
         conda install pytest
 
+    # 更新されたテストの実行部分
     - name: Run tests with pytest
       run: |
-        pytest tests/
+        pytest test_example.py
