--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -35,9 +35,11 @@ jobs:
     - name: Check for requirements.txt and install Pip dependencies
       run: |
         if [ -f requirements.txt ]; then
+          echo "requirements.txt exists. Installing dependencies..."
           pip install -r requirements.txt
         else
           echo "requirements.txt does not exist. Skipping pip install."
+        fi
 
     - name: Lint with flake8
       run: |
