--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -6,32 +6,33 @@ jobs:
   build-linux:
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 5
+      max-parallel: 4
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - name: Setup Conda
+      uses: conda-incubator/setup-miniconda@v2
       with:
-        python-version: '3.8'
-
-    - name: Install Conda dependencies
-      run: |
-        conda env create -f environment.yml
-        echo "conda activate xRI" >> $GITHUB_ENV
+        activate-environment: xRI
+        environment-file: environment.yml
+        python-version: 3.8
+        auto-activate-base: false
 
     - name: Install Pip dependencies if requirements.txt exists
+      shell: bash -l {0}
       run: |
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt
         fi
 
     - name: Lint with flake8
+      shell: bash -l {0}
       run: |
-        conda run -n xRI flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        conda run -n xRI flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Run tests with pytest
+      shell: bash -l {0}
       run: |
-        conda run -n xRI pytest test/test_example.py
+        pytest test/test_example.py
