--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,8 @@ channels:
 dependencies:
   - python=3.8
   - aiohttp
-  - pip
+  - pytest  # Ensure pytest is included here
+  - flake8  # Ensure flake8 is included here
   - pip:
       - python-dotenv
       - llama2==0.0.1.dev0
