--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -16,20 +16,11 @@ jobs:
       with:
         activate-environment: xRI
         environment-file: environment.yml
-        python-version: 3.8
+        python-version: 3.12.2
         auto-activate-base: false
 
-    - name: Install Pip dependencies if requirements.txt exists
-      shell: bash -l {0}
-      run: |
-        if [ -f requirements.txt ]; then
-          pip install -r requirements.txt
-        fi
-
-    - name: Install flake8
-      shell: bash -l {0}
-      run: |
-        conda run -n xRI pip install flake8
+    # このステップはrequirements.txtに依存する代わりにenvironment.ymlを使用しているため削除されました
+    # Flake8はenvironment.ymlに含まれているため、このインストールステップも不要になります
 
     - name: Lint with flake8
       shell: bash -l {0}
